--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.004" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/spinnerStudentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:drawable/btn_dropdown"
