--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".myGIU.ScheduleActivity">
 
+    <TextView
+        android:id="@+id/displaySchedule"
+        android:layout_width="163dp"
+        android:layout_height="59dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
