--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -19,15 +19,14 @@
         app:layout_constraintVertical_bias="0.198" />
 
     <Button
-        android:id="@+id/previous"
+        android:id="@+id/addCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/previous"
+        android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:onClick="buttonPreviousOnClick" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
@@ -85,8 +84,8 @@
 
     <Spinner
         android:id="@+id/spinnerCourseName"
-        android:layout_width="193dp"
-        android:layout_height="32dp"
+        android:layout_width="178dp"
+        android:layout_height="45dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
