--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,8 +101,8 @@
 
     <TextView
         android:id="@+id/text_view"
-        android:layout_width="402dp"
-        android:layout_height="386dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
