--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -70,7 +70,7 @@
         android:id="@+id/backToLogin_schedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/backToLogin"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -78,108 +78,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.954" />
 
-    <!--    <TextView-->
-<!--        android:id="@+id/fall"-->
-<!--        android:layout_width="41dp"-->
-<!--        android:layout_height="21dp"-->
-<!--        android:layout_marginStart="44dp"-->
-<!--        android:layout_marginLeft="44dp"-->
-<!--        android:layout_marginEnd="309dp"-->
-<!--        android:layout_marginRight="309dp"-->
-<!--        android:text="Fall"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.108" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/winter"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="44dp"-->
-<!--        android:layout_marginLeft="44dp"-->
-<!--        android:layout_marginTop="375dp"-->
-<!--        android:layout_marginEnd="328dp"-->
-<!--        android:layout_marginRight="328dp"-->
-<!--        android:layout_marginBottom="437dp"-->
-<!--        android:text="Winter"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.69" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/adding"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="301dp"-->
-<!--        android:layout_marginLeft="301dp"-->
-<!--        android:layout_marginTop="448dp"-->
-<!--        android:layout_marginEnd="17dp"-->
-<!--        android:layout_marginRight="17dp"-->
-<!--        android:layout_marginBottom="235dp"-->
-<!--        android:text="Add Courses"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.968"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/Back"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="29dp"-->
-<!--        android:layout_marginLeft="29dp"-->
-<!--        android:layout_marginTop="448dp"-->
-<!--        android:layout_marginEnd="153dp"-->
-<!--        android:layout_marginRight="153dp"-->
-<!--        android:layout_marginBottom="235dp"-->
-<!--        android:text="Back"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/adding"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--&lt;!&ndash;    <ListView&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/displayFallCourse"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="235dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="135dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        tools:layout_editor_absoluteX="24dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        tools:layout_editor_absoluteY="43dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintHorizontal_bias="0.636"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintVertical_bias="0.129"/>&ndash;&gt;-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/displayFallCourse"-->
-<!--        android:layout_width="235dp"-->
-<!--        android:layout_height="135dp"-->
-<!--        android:text=""-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.636"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.129" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/displayWinterCourse"-->
-<!--        android:layout_width="235dp"-->
-<!--        android:layout_height="135dp"-->
-<!--        android:text=""-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.636"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.461" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
